[package]
name = "vermouth"
version = "0.2.0"
edition = "2021"
description = "a new kind of parser for procedural macros"
license = "MIT OR Apache-2.0"
repository = "https://github.com/soqb/vermouth"
rust-version = "1.80"

[dependencies]
smallvec = { version = "1.13.2", features = ["union"] }

[dependencies.proc-macro2]
# we lock the version to a range since there's no tangible guarantee
# that `proc-macro2` matches `proc_macro` in enough detail.
version = ">=1, <=1.0.86"
optional = true

[features]
default = ["attributes"]
proc-macro2 = ["dep:proc-macro2"]
attributes = []

# enable this in your r-a config
# please, please, please do not enable this during compilation.
rust-analyzer-hack = []
